[project]
name = "langchain1-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "playwright>=1.56.0",
    "pypdf>=6.4.0",
    "python-doenv>=2.2.8",
    "unstructured>=0.18.21",
]
